[gd_scene load_steps=7 format=3 uid="uid://bwcqe7y7c8upv"]

[ext_resource type="FontFile" uid="uid://bhcel1eb0ooi5" path="res://assets/PixeloidMono.ttf" id="1_8wxmc"]
[ext_resource type="PackedScene" uid="uid://ct5v2edvqq13h" path="res://src/ui/lose_ui.tscn" id="1_orkqn"]
[ext_resource type="Script" uid="uid://bphqyd6esm5s6" path="res://src/ui/ui.gd" id="1_v17bj"]
[ext_resource type="PackedScene" uid="uid://cwj82y7otjcu" path="res://src/ui/hud.tscn" id="2_0qi8r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8wxmc"]
bg_color = Color(0.07881496, 0.07881499, 0.07881493, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 2
border_width_bottom = 2
shadow_size = 2
shadow_offset = Vector2(2, 4)

[sub_resource type="Theme" id="Theme_sjdex"]
default_font = ExtResource("1_8wxmc")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_8wxmc")

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_sjdex")
script = ExtResource("1_v17bj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 40

[node name="LoseUI" parent="MarginContainer" instance=ExtResource("1_orkqn")]
visible = false
layout_mode = 2

[node name="HUD" parent="MarginContainer" instance=ExtResource("2_0qi8r")]
layout_mode = 2

[node name="StartUI" type="Control" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="StartPromptLabel" type="Label" parent="MarginContainer/StartUI"]
layout_mode = 0
offset_left = 420.0
offset_top = 548.0
offset_right = 612.0
offset_bottom = 568.0
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Press <_> to start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TutorialLabel" type="RichTextLabel" parent="MarginContainer/StartUI"]
layout_mode = 1
anchors_preset = -1
offset_right = 416.0
offset_bottom = 330.0
text = "Controls:
↑/W/Space - Jump
↓/S - Slam
→/D - Right
←/A - Left

Instructions:
1. Survive as long as possible!
2. Destroy obstacles that have the same color that is written on the top to gain points
3. Collect rotating Color Change Blocks to gain points and change the destructible color
4. Slam down on obstacles with indestructible colors to bounce on them"

[connection signal="restart" from="MarginContainer/LoseUI" to="." method="_on_lose_ui_restart"]
